--- a/html/signin/SingIn.html
+++ b/html/signin/SingIn.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../css/header/header.css">
     <link rel="stylesheet" href="../../css/main/background1.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
-    <link rel="stylesheet" href="../../css/signin.css">
+    <link rel="stylesheet" href="../../css/signin/SignIn.css">
     <script src="../../Script.js" defer></script>
     <link rel="stylesheet" href="../../css/footer/footer.css">
 </head>
@@ -42,6 +42,12 @@
                 <div class="password">
                     <h3>Password:<h3>
                             <input type="password" id="password" name="password" required>
+                </div>
+                <div class="successful">
+                    <h3>Successful Sign In</h3>
+                </div>
+                <div class="Invalid">
+                    <h3>Invalid Username or Password</h3>
                 </div>
                 <div class="submit">
                     <button type="submit">Sign In</button>
