--- a/html/signin/SingIn.html
+++ b/html/signin/SingIn.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Assets/logo.png" type="image/png">
+    <link rel="icon" href="../../Assets/logo.png" type="image/png">
     <title>Sign In</title>
     <link rel="stylesheet" href="../../css/Styles.css">
     <link rel="stylesheet" href="../../css/header/header.css">
@@ -24,7 +24,7 @@
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="../../Index.html">About</a></li>
+                    <li><a href="../../index.html">About</a></li>
                     <li><a href="#Services">Services</a></li>
                     <li><a href="../signin/SingIn.html">Sign In</a></li>
                     <li><a href="#Contact">Contact</a></li>
