--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="../Index.html">About</a></li>
+                    <li><a href="../index.html">About</a></li>
                     <li><a href="#Services">Services</a></li>
                     <li><a href="html/signin/SingIn.html">Sign In</a></li>
                     <li><a href="#Contact">Contact</a></li>
