--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/Assets/logo.png" type="image/png">
+    <link rel="icon" href="Assets/logo.png" type="image/png">
     <title>Cardiology Department</title>
     <link rel="stylesheet" href="css/Styles.css">
     <link rel="stylesheet" href="css/header/header.css">
