--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </main>
     <footer>
         <div class="footer-container">
-            <p>Copyrigh &copy; Ebrahim Mohamed, Mohamed Jamel</p>
+            <p>Copyright &copy; Ebrahim Mohamed, Mohamed Jameel</p>
         </div>
     </footer>
 </body>
