--- a/html/signin/SingIn.html
+++ b/html/signin/SingIn.html
@@ -26,6 +26,7 @@
                 <ul>
                     <li><a href="../../index.html">About</a></li>
                     <li><a href="#Services">Services</a></li>
+                    <li><a href="../Schedule/schedule.html">Schedule</a></li>
                     <li><a href="../signin/SingIn.html">Sign In</a></li>
                     <li><a href="#Contact">Contact</a></li>
                 </ul>
@@ -35,6 +36,7 @@
     <main>
         <div class="signin-container">
             <div class="border">
+                <h2 class="forDrMsg">Sign In Only for Doctors</h2>
                 <div class="username">
                     <h3>Username:<h2>
                             <input type="text" id="username" name="username" required>
@@ -43,12 +45,7 @@
                     <h3>Password:<h3>
                             <input type="password" id="password" name="password" required>
                 </div>
-                <div class="successful">
-                    <h3>Successful Sign In</h3>
-                </div>
-                <div class="Invalid">
-                    <h3>Invalid Username or Password</h3>
-                </div>
+                <div class="msg"></div>
                 <div class="submit">
                     <button type="submit">Sign In</button>
                 </div>
