--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <ul>
                     <li><a href="../index.html">About</a></li>
                     <li><a href="#Services">Services</a></li>
+                    <li><a href="html/Schedule/schedule.html">Schedule</a></li>
                     <li><a href="html/signin/SingIn.html">Sign In</a></li>
                     <li><a href="#Contact">Contact</a></li>
                 </ul>
