--- a/html/appointments/appointment.html
+++ b/html/appointments/appointment.html
@@ -47,23 +47,7 @@
                             <th>Checkmark</th>
                         </tr>
                     </thead>
-                    <tbody class="patients">
-                        <tr>
-                            <td>John Doe</td>
-                            <td>Regular</td>
-                            <td>2023-10-01</td>
-                            <td>10:00 AM</td>
-                            <td ><input type="checkbox"></td>
-                        </tr>
-                        <tr>
-                            <td>Jane Smith</td>
-                            <td>Surgery</td>
-                            <td>2023-10-02</td>
-                            <td>11:00 AM</td>
-                            <td><input type="checkbox"></td>
-                        </tr>
-                        <!-- Add more rows as needed -->
-                    </tbody>
+                    <tbody class="patients"></tbody>
                 </table>
             </div>
         </main>
