--- a/html/Schedule/schedule.html
+++ b/html/Schedule/schedule.html
@@ -39,6 +39,8 @@
                 <h2>Schedule an Appointment or Surgery</h2>
 
                 <form id="appointment-form">
+                    <label for="appointment-name">Your Name:</label>
+                    <input type="text" id="appointment-name" name="appointment-name" required>
                     <label for="appointment-type">Select Type:</label>
                     <select id="appointment-type" name="appointment-type" required>
                         <option value="appointment">Regular Appointment</option>
