--- a/html/appointments/appointment.html
+++ b/html/appointments/appointment.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../Assets/logo.png" type="image/png">
-    <title>Schedule an appointment</title>
+    <title>Appointments</title>
     <link rel="stylesheet" href="../../css/Styles.css">
     <link rel="stylesheet" href="../../css/header/header.css">
     <link rel="stylesheet" href="../../css/main/background1.css">
@@ -35,9 +35,8 @@
             </div>
         </header>
         <main>
-            <div class="background1"></div>
             <div class="table">
-                <table >
+                <table>
                     <thead>
                         <tr>
                             <th>Patient</th>
@@ -57,7 +56,6 @@
             <p>Copyright &copy; Ebrahim Mohamed, Mohamed Jameel</p>
         </div>
     </footer>
-    
 </body>
 
 </html>
