--- a/html/Schedule/schedule.html
+++ b/html/Schedule/schedule.html
@@ -25,7 +25,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="../../index.html">About</a></li>
-                    <li><a href="#Services">Services</a></li>
+                    <li><a href="../../html/Services/Services.html">Services</a></li>
                     <li><a href="../Schedule/schedule.html">Schedule</a></li>
                     <li><a href="../signin/SingIn.html">Sign In</a></li>
                     <li><a href="#Contact">Contact</a></li>
@@ -43,8 +43,15 @@
                     <input type="text" id="appointment-name" name="appointment-name" required>
                     <label for="appointment-type">Select Type:</label>
                     <select id="appointment-type" name="appointment-type" required>
-                        <option value="appointment">Regular Appointment</option>
-                        <option value="surgery">Surgery</option>
+                        <option value="Echocardiography">Echocardiography</option>
+                        <option value="Electrocardiogram">Electrocardiogram</option>
+                        <option value="Holter Monitoring">Holter Monitoring</option>
+                        <option value="Stress Testing">Stress Testing</option>
+                        <option value="Cardiac Catheterization & Angiography">Cardiac Catheterization & Angiography</option>
+                        <option value="Pacemaker Implantation & Monitoring">Pacemaker Implantation & Monitoring</option>
+                        <option value="Blood Pressure Monitoring">Blood Pressure Monitoring</option>
+                        <option value="Consultation with Cardiologists">Consultation with Cardiologists</option>
+                        <option value="Cardiac Surgery">Cardiac Surgery</option>
                     </select>
 
                     <label for="appointment-date">Choose Date:</label>
