--- a/html/signin/SingIn.html
+++ b/html/signin/SingIn.html
@@ -25,7 +25,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="../../index.html">About</a></li>
-                    <li><a href="#Services">Services</a></li>
+                    <li><a href="../../html/Services/Services.html">Services</a></li>
                     <li><a href="../Schedule/schedule.html">Schedule</a></li>
                     <li><a href="../signin/SingIn.html">Sign In</a></li>
                     <li><a href="#Contact">Contact</a></li>
