Habd2 fel equipment Zabt error so8ayar fel dr page

--- a/html/Equipment/Equipment.html
+++ b/html/Equipment/Equipment.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
     <script src="../../Script.js" defer></script>
     <link rel="stylesheet" href="../../css/footer/footer.css">
-    <link rel="stylesheet" href="../../css/schedule/schedule.css">
-    <link rel="stylesheet" href="../../css/appointment/appointment.css">
 </head>
 
 <body>
@@ -26,30 +24,14 @@
                 </div>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="../Equipment/Equipment.html">Equipment</a></li>
-                        <li><a href="../Schedule/schedule.html">Schedule</a></li>
+                        <li><a href="Equipment.html">Equipment</a></li>
+                        <li><a href="../appointments/appointment.html">Schedule</a></li>
                         <li><a href="../Sign Out/signout.html">Sign Out</a></li>
                         <li><a href="#Contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
-        <main>
-            <div class="table">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Patient</th>
-                            <th>Type</th>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Checkmark</th>
-                        </tr>
-                    </thead>
-                    <tbody class="patients"></tbody>
-                </table>
-            </div>
-        </main>
     </div>
     <footer>
         <div class="footer-container">
