--- a/html/appointments/appointment.html
+++ b/html/appointments/appointment.html
@@ -29,7 +29,7 @@
                         <li><a href="../Equipment/Equipment.html">Equipment</a></li>
                         <li><a href="../Schedule/schedule.html">Schedule</a></li>
                         <li><a href="../Sign Out/signout.html">Sign Out</a></li>
-                        <li><a href="#Contact">Contact</a></li>
+                        <!-- <li><a href="#Contact">Contact</a></li> -->
                     </ul>
                 </nav>
             </div>
