--- a/html/Sign Out/signout.html
+++ b/html/Sign Out/signout.html
@@ -24,10 +24,10 @@
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#Services">Services</a></li>
+                    <li><a href="../Equipment/Equipment.html">Equipment</a></li>
                     <li><a href="../appointments/appointment.html">Schedule</a></li>
                     <li><a href="../Sign Out/signout.html">Sign Out</a></li>
-                    <li><a href="#Contact">Contact</a></li>
+                    <!-- <li><a href="#Contact">Contact</a></li> -->
                 </ul>
             </nav>
         </div>
