Refactor appointment page layout for improved structure and styling

--- a/html/appointments/appointment.html
+++ b/html/appointments/appointment.html
@@ -35,19 +35,24 @@
             </div>
         </header>
         <main>
-            <div class="table">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Patient</th>
-                            <th>Type</th>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Checkmark</th>
-                        </tr>
-                    </thead>
-                    <tbody class="patients"></tbody>
-                </table>
+            <div class="container-table">
+                <div class="container-inner">
+                    <h2>Appointments</h2>
+                    <div class="table">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Patient</th>
+                                    <th>Type</th>
+                                    <th>Date</th>
+                                    <th>Time</th>
+                                    <th>Checkmark</th>
+                                </tr>
+                            </thead>
+                            <tbody class="patients"></tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
