--- a/html/Sign Out/signout.html
+++ b/html/Sign Out/signout.html
@@ -25,7 +25,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="../Equipment/Equipment.html">Equipment</a></li>
-                    <li><a href="../appointments/appointment.html">Schedule</a></li>
+                    <li><a href="../appointments/appointment.html">Appointments</a></li>
                     <li><a href="../Sign Out/signout.html">Sign Out</a></li>
                     <!-- <li><a href="#Contact">Contact</a></li> -->
                 </ul>
