--- a/html/appointments/appointment.html
+++ b/html/appointments/appointment.html
@@ -27,7 +27,7 @@
                 <nav class="navbar">
                     <ul>
                         <li><a href="../Equipment/Equipment.html">Equipment</a></li>
-                        <li><a href="../Schedule/schedule.html">Schedule</a></li>
+                        <li><a href="../appointments/appointment.html">Appointments</a></li>
                         <li><a href="../Sign Out/signout.html">Sign Out</a></li>
                         <!-- <li><a href="#Contact">Contact</a></li> -->
                     </ul>
