--- a/html/Schedule/schedule.html
+++ b/html/Schedule/schedule.html
@@ -28,7 +28,7 @@
                     <li><a href="../../html/Services/Services.html">Services</a></li>
                     <li><a href="../Schedule/schedule.html">Schedule</a></li>
                     <li><a href="../signin/SingIn.html">Sign In</a></li>
-                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="../contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
