--- a/html/contact/contact.html
+++ b/html/contact/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../css/header/header.css">
     <link rel="stylesheet" href="../../css/main/background1.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
-    <link rel="stylesheet" href="../../css/signin/SignIn.css">
+    <link rel="stylesheet" href="../../css/contact/contact.css">
     <script src="../../Script.js" defer></script>
     <link rel="stylesheet" href="../../css/footer/footer.css">
 </head>
@@ -34,24 +34,27 @@
         </div>
     </header>
     <main>
-        <div class="signin-container">
-            <div class="border">
-                <h2 class="forDrMsg">Sign In Only for Doctors</h2>
-                <div class="username">
-                    <h3>Username:<h2>
-                            <input type="text" id="username" name="username" required>
-                </div>
-                <div class="password">
-                    <h3>Password:<h3>
-                            <input type="password" id="password" name="password" required>
-                </div>
-                <div class="msg"></div>
-                <div class="submit">
-                    <button type="submit">Sign In</button>
-                </div>
-            </div>
-        </div>
-    </main>
+  <div class="contact-container">
+    <h2>Contact Us</h2>
+    <form id="contact-form">
+      <label for="name">Name <span>*</span></label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email <span>*</span></label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="phone">Phone Number<span>*</span></label>
+      <input type="tel" id="phone" name="phone" required>
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="4" placeholder="Write something..."></textarea>
+
+      <button type="submit">Send</button>
+      <div id="contact-response"></div>
+    </form>
+  </div>
+</main>
+
     <footer>
         <div class="footer-container">
             <p>Copyright &copy; Ebrahim Mohamed, Mohamed Jameel</p>
