Implement patient sign-up and sign-in functionality with local storage management; update navigation links and styles for improved user experience.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <ul>
                     <li><a href="index.html">About</a></li>
                     <li><a href="html/Services/Services.html">Services</a></li>
-                    <li><a href="html/Schedule/schedule.html">Schedule</a></li>
+                    <li><a href="html/patientSignin/patientSignUp.html">Sign Up</a></li>
                     <li><a href="html/signin/SingIn.html">Sign In</a></li>
-                    <li><a href="#Contact">Contact</a></li>
+                    <li><a href="html/contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
