--- a/html/Schedule/schedule.html
+++ b/html/Schedule/schedule.html
@@ -24,11 +24,10 @@
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="../../index.html">About</a></li>
-                    <li><a href="../../html/Services/Services.html">Services</a></li>
                     <li><a href="../Schedule/schedule.html">Schedule</a></li>
-                    <li><a href="../signin/SingIn.html">Sign In</a></li>
                     <li><a href="../contact/contact.html">Contact</a></li>
+                    <li><a href="../Sign Out/signout.html">Sign Out</a></li>
+                    <button id="delete-account-button" type="button">Delete Account</button>
                 </ul>
             </nav>
         </div>
