--- a/html/patientSignin/patientSignUp.html
+++ b/html/patientSignin/patientSignUp.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../Assets/logo.png" type="image/png">
-    <title>Sign In</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="../../css/Styles.css">
     <link rel="stylesheet" href="../../css/header/header.css">
     <link rel="stylesheet" href="../../css/main/background1.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
-    <link rel="stylesheet" href="../../css/signin/SignIn.css">
+    <link rel="stylesheet" href="../../css/patientSignin/patientSignin.css">
     <script src="../../Script.js" defer></script>
     <link rel="stylesheet" href="../../css/footer/footer.css">
 </head>
@@ -34,20 +34,21 @@
         </div>
     </header>
     <main>
-        <div class="signin-container">
-            <div class="border">
-                <h2 class="forDrMsg">Sign In Only for Doctors</h2>
-                <div class="username">
+        <div class="patient-signin-container">
+            <div class="patient-border">
+                <h2 class="patient-forDrMsg">Sign Up for Patients</h2>
+                <div class="patient-username">
                     <h3>Username:<h2>
                             <input type="text" id="username" name="username" required>
                 </div>
-                <div class="password">
+                <div class="patient-password">
                     <h3>Password:<h3>
                             <input type="password" id="password" name="password" required>
                 </div>
-                <div class="msg"></div>
-                <div class="submit">
-                    <button type="submit">Sign In</button>
+                <div class="patient-msg"></div>
+                <div class="patient-submit">
+                    <button type="patient-submit">Sign Up</button>
+                    <a href="/html/patientSignin/patientSignin.html">you already have an account</a>
                 </div>
             </div>
         </div>
