--- a/html/patientSignin/patientSignin.html
+++ b/html/patientSignin/patientSignin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../css/header/header.css">
     <link rel="stylesheet" href="../../css/main/background1.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap">
-    <link rel="stylesheet" href="../../css/signin/SignIn.css">
+    <link rel="stylesheet" href="../../css/patientSignin/patientSignin.css">
     <script src="../../Script.js" defer></script>
     <link rel="stylesheet" href="../../css/footer/footer.css">
 </head>
@@ -34,20 +34,20 @@
         </div>
     </header>
     <main>
-        <div class="signin-container">
-            <div class="border">
-                <h2 class="forDrMsg">Sign In Only for Doctors</h2>
-                <div class="username">
+        <div class="patient-signin-container">
+            <div class="patient-border">
+                <h2 class="patient-forDrMsg">Sign In for Patients</h2>
+                <div class="patient-username">
                     <h3>Username:<h2>
                             <input type="text" id="username" name="username" required>
                 </div>
-                <div class="password">
+                <div class="patient-password">
                     <h3>Password:<h3>
                             <input type="password" id="password" name="password" required>
                 </div>
-                <div class="msg"></div>
-                <div class="submit">
-                    <button type="submit">Sign In</button>
+                <div class="patient-msg"></div>
+                <div class="patient-submit">
+                    <button type="patient-submit">Sign In</button>
                 </div>
             </div>
         </div>
