Fix link to sign-in page in patient sign-up form

--- a/html/patientSignin/patientSignUp.html
+++ b/html/patientSignin/patientSignUp.html
@@ -48,7 +48,7 @@
                 <div class="patient-msg"></div>
                 <div class="patient-submit">
                     <button type="patient-submit">Sign Up</button>
-                    <a href="/html/patientSignin/patientSignin.html">you already have an account</a>
+                    <a href="../patientSignin/patientSignin.html">you already have an account</a>
                 </div>
             </div>
         </div>
