Swap between Sign out page and other pages integrated delete patient logic

--- a/html/Schedule/schedule.html
+++ b/html/Schedule/schedule.html
@@ -25,7 +25,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="../Schedule/schedule.html">Schedule</a></li>
-                    <li><a href="../Sign Out/signout.html">Sign Out</a></li>
+                    <li><a href="../Patient Sign Out/signOutP.html">Sign Out</a></li>
                     <button id="delete-account-button" type="button">Delete Account</button>
                 </ul>
             </nav>
