--- a/html/Patient Sign Out/signOutP.html
+++ b/html/Patient Sign Out/signOutP.html
@@ -24,10 +24,8 @@
             </div>
             <nav class="navbar">
                 <ul>
-                    <li><a href="../Equipment/Equipment.html">Equipment</a></li>
-                    <li><a href="../appointments/appointment.html">Appointments</a></li>
-                    <li><a href="../Sign Out/signout.html">Sign Out</a></li>
-                    <!-- <li><a href="#Contact">Contact</a></li> -->
+                    <li><a href="../Schedule/schedule.html">Schedule</a></li>
+                    <li><a href="../Patient Sign Out/signOutP.html">Sign Out</a></li>
                 </ul>
             </nav>
         </div>
