--- a/html/Services/Services.html
+++ b/html/Services/Services.html
@@ -26,8 +26,8 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="../../index.html">About</a></li>
-                    <li><a href="../../html/Services/Services.html">Services</a></li>
-                    <li><a href="../Schedule/schedule.html">Schedule</a></li>
+                    <li><a href="Services.html">Services</a></li>
+                    <li><a href="../patientSignin/patientSignUp.html">Sign Up</a></li>
                     <li><a href="../signin/SingIn.html">Sign In</a></li>
                     <li><a href="../contact/contact.html">Contact</a></li>
                 </ul>
