Update navigation links to differentiate between Patient and Doctor sign-in options

--- a/html/Services/Services.html
+++ b/html/Services/Services.html
@@ -27,8 +27,8 @@
                 <ul>
                     <li><a href="../../index.html">About</a></li>
                     <li><a href="../../html/Services/Services.html">Services</a></li>
-                    <li><a href="../Schedule/schedule.html">Schedule</a></li>
-                    <li><a href="../signin/SingIn.html">Sign In</a></li>
+                    <li><a href="../patientSignin/patientSignin.html">Patient</a></li>
+                    <li><a href="../signin/SingIn.html">Doctor</a></li>
                     <li><a href="../contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
