--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <ul>
                     <li><a href="index.html">About</a></li>
                     <li><a href="html/Services/Services.html">Services</a></li>
-                    <li><a href="html/patientSignin/patientSignUp.html">Sign Up</a></li>
-                    <li><a href="html/signin/SingIn.html">Sign In</a></li>
+                    <li><a href="html/patientSignin/patientSignin.html">Patient</a></li>
+                    <li><a href="html/signin/SingIn.html">Doctor</a></li>
                     <li><a href="html/contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
