--- a/html/signin/SingIn.html
+++ b/html/signin/SingIn.html
@@ -26,8 +26,8 @@
                 <ul>
                     <li><a href="../../index.html">About</a></li>
                     <li><a href="../../html/Services/Services.html">Services</a></li>
-                    <li><a href="../../html/patientSignin/patientSignUp.html">Sign Up</a></li>
-                    <li><a href="../signin/SingIn.html">Sign In</a></li>
+                    <li><a href="../patientSignin/patientSignin.html">Patient</a></li>
+                    <li><a href="../signin/SingIn.html">Doctor</a></li>
                     <li><a href="../contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
