Added pics for equipment lists and added more info in about page

--- a/html/Equipment/Equipment.html
+++ b/html/Equipment/Equipment.html
@@ -52,63 +52,63 @@
           <tr>
             <td>Echocardiography</td>
             <td>Ultrasound Machine</td>
-            <td><img src="../../Assets/echo-machine.png" alt="Echo Machine" class="device-img"></td>
+            <td><img src="../../Assets/echo-machine.jpeg" alt="Echo Machine" class="device-img"></td>
             <td>Cardiology, Radiology, OB/GYN</td>
             <td><span id="echocardiography-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Electrocardiogram (ECG)</td>
             <td>ECG Machine</td>
-            <td><img src="../../Assets/ecg-machine.png" alt="ECG Machine" class="device-img"></td>
+            <td><img src="../../Assets/ecg-machine.jpg" alt="ECG Machine" class="device-img"></td>
             <td>Cardiology, Emergency, ICU</td>
             <td><span id="electrocardiogram-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Holter Monitoring</td>
             <td>Holter Recorder</td>
-            <td><img src="../../Assets/holter.png" alt="Holter Monitor" class="device-img"></td>
+            <td><img src="../../Assets/holter.jpeg" alt="Holter Monitor" class="device-img"></td>
             <td>Cardiology</td>
             <td><span id="holter-monitoring-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Stress Testing</td>
             <td>Treadmill & ECG</td>
-            <td><img src="../../Assets/stress-test.png" alt="Stress Test" class="device-img"></td>
+            <td><img src="../../Assets/stress-test.jpeg" alt="Stress Test" class="device-img"></td>
             <td>Cardiology</td>
             <td><span id="stress-testing-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Cardiac Catheterization</td>
             <td>Cath Lab System</td>
-            <td><img src="../../Assets/cath-lab.png" alt="Cath Lab" class="device-img"></td>
+            <td><img src="../../Assets/cath-lab.jpeg" alt="Cath Lab" class="device-img"></td>
             <td>Cardiology, Radiology</td>
             <td><span id="cardiac-catheterization-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Pacemaker Monitoring</td>
             <td>Pacemaker Programmer</td>
-            <td><img src="../../Assets/pacemaker.png" alt="Pacemaker" class="device-img"></td>
+            <td><img src="../../Assets/pacemaker.jpeg" alt="Pacemaker" class="device-img"></td>
             <td>Cardiology, Surgery</td>
             <td><span id="pacemaker-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Blood Pressure Monitoring</td>
             <td>ABPM Monitor</td>
-            <td><img src="../../Assets/bp-monitor.png" alt="BP Monitor" class="device-img"></td>
+            <td><img src="../../Assets/bp-monitor.jpeg" alt="BP Monitor" class="device-img"></td>
             <td>Cardiology, Internal Medicine</td>
             <td><span id="blood-pressure-monitoring-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Consultation</td>
             <td>Examination Tools</td>
-            <td><img src="../../Assets/stethoscope.png" alt="Consultation" class="device-img"></td>
+            <td><img src="../../Assets/stethoscope.jpg" alt="Consultation" class="device-img"></td>
             <td>All Clinical Departments</td>
             <td><span id="consultation-counter" class="device-count">0 patients</span></td>
           </tr>
           <tr>
             <td>Cardiac Surgery</td>
             <td>OR Equipment</td>
-            <td><img src="../../Assets/surgery.png" alt="Surgery" class="device-img"></td>
+            <td><img src="../../Assets/surgery.jpg" alt="Surgery" class="device-img"></td>
             <td>Cardiothoracic Surgery, Anesthesia</td>
             <td><span id="cardiac-surgery-counter" class="device-count">0 patients</span></td>
           </tr>
