--- a/index.html
+++ b/index.html
@@ -61,31 +61,28 @@
             <div class="expert2">
                 <div class="expert-Name">
                     <img src="Assets/checkmark.png" alt="Logo">
-                    <h2>Health care Expert</h2>
+                    <h2>Cardiology Specialists</h2>
                 </div>
                 <div class="expert-Content">
-                    <p>Our doctors are the health the caring & heart specialist.</p>
-                </div>
+                    <p>Our certified heart doctors offer advanced diagnostics and personalized treatment plans.</p>                </div>
             </div>
         </div>
         <div class="experts-r2">
             <div class="expert1">
                 <div class="expert-Name">
                     <img src="Assets/checkmark.png" alt="Logo">
-                    <h2>Expert Nursing</h2>
+                    <h2> Emergency Response</h2>
                 </div>
                 <div class="expert-Content">
-                    <p>Expert Nursing facility give us doctor on home service.</p>
-                </div>
+                    <p>Rapid intervention for cardiac emergencies with 24/7 availability.</p>                </div>
             </div>
             <div class="expert2">
                 <div class="expert-Name">
                     <img src="Assets/checkmark.png" alt="Logo">
-                    <h2>Health care Expert</h2>
+                    <h2>Telehealth Consults</h2>
                 </div>
                 <div class="expert-Content">
-                    <p>Our doctors are the health the caring & heart specialist.</p>
-                </div>
+                    <p>Book online appointments with specialists from the comfort of your home.</p>                </div>
             </div>
         </div>
         <div class="poster">
