--- a/html/Services/Services.html
+++ b/html/Services/Services.html
@@ -27,8 +27,8 @@
                 <ul>
                     <li><a href="../../index.html">About</a></li>
                     <li><a href="Services.html">Services</a></li>
-                    <li><a href="../patientSignin/patientSignUp.html">Sign Up</a></li>
-                    <li><a href="../signin/SingIn.html">Sign In</a></li>
+                    <li><a href="../patientSignin/patientSignUp.html">Patient</a></li>
+                    <li><a href="../signin/SingIn.html">Doctor</a></li>
                     <li><a href="../contact/contact.html">Contact</a></li>
                 </ul>
             </nav>
